SaleItems report specs

--- a/engines/admin_ui/app/views/admin_ui/reports/sale_items/show.html.slim
+++ b/engines/admin_ui/app/views/admin_ui/reports/sale_items/show.html.slim
@@ -11,7 +11,7 @@
         .col-lg-12
           button type='submit' Generate
 
-h2 Sample
+h2 10 Row Sample
 
 div.pre-scrollable style='max-height:100%;'
   table.table.table-condensed
