move Payments report into reports/ namespace

--- a/engines/admin_ui/app/views/admin_ui/reports/payments/show.html.slim
+++ b/engines/admin_ui/app/views/admin_ui/reports/payments/show.html.slim
@@ -3,7 +3,7 @@
 
 h2 Report
 
-= form_tag admin_ui.payments_report_path, method: 'post' do
+= form_tag admin_ui.reports_payments_path, method: 'post' do
   button type='submit' Generate
 
 h2 Sample
