--- a/engines/admin_ui/app/views/admin_ui/core/_menu_items.html.slim
+++ b/engines/admin_ui/app/views/admin_ui/core/_menu_items.html.slim
@@ -1,13 +1,13 @@
 = menu_item root_path,            'Dashboard',          icon: 'dashboard',  exact: true
 = menu_item return_requests_path, 'Returns Management', icon: 'thumbs-down'
 
-li class="#{active_link_to_class(payments_report_path)} #{active_link_to_class(reports_sale_items_path)}"
+li class="#{active_link_to_class(reports_payments_path)} #{active_link_to_class(reports_sale_items_path)}"
   a href="#"
     i.fa.fa-line-chart
     span.nav-label Reports
     span.fa.arrow
   ul.nav.nav-second-level.collapse aria-expanded="false" style="height: 0px;"
-    li = active_link_to 'Payments', payments_report_path
+    li = active_link_to 'Payments', reports_payments_path
     li = active_link_to 'Sale Items', reports_sale_items_path
     li = active_link_to 'Coupon Orders', reports_coupon_adjusted_orders_path
 
