[feature] add email and password field in checkout page
I add email and password field in checkout page to let user log in before checkout

WARNING : if user click login before the page is fully loaded , page to navigate to login page

--- a/app/assets/stylesheets/redesign/_checkout.css.scss
+++ b/app/assets/stylesheets/redesign/_checkout.css.scss
@@ -1,7 +1,16 @@
 // Checkout page url: /checkout
 .page-content.checkout {
   // - Override form styles
-  label { 
+
+  .auth-alert {
+    padding: 15px 35px 15px 15px;
+    margin-bottom: 25px;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    display: none;
+  }
+
+  label {
     color: #000;
   }
   .form-control {
@@ -19,7 +28,7 @@
     background-color: $gray-light-bg;
     border: 0;
 
-    h3 { 
+    h3 {
       text-transform: uppercase;
       margin: 25px 0;
     }
@@ -69,7 +78,7 @@
 
   .promo-code {
     margin: 20px 0;
-    .input-group-addon { 
+    .input-group-addon {
       border-bottom: 0 !important;
       padding: 0;
       vertical-align: bottom;
