--- a/app/views/spree/checkout/_address_step.html.slim
+++ b/app/views/spree/checkout/_address_step.html.slim
@@ -5,6 +5,19 @@
 
   - if not signed_in?
     h2.checkout-section-title Log In if you have an account
+    .auth-alert.alert-dismissible.fade.in.alert-danger
+      button type="button" class="close" data-dismiss="alert" aria-label="Close" x
+      h3.alert-danger
+        | Invalid email or password
+    .row
+      .col-md-6.form-group
+        label
+          | Email address *
+        = text_field_tag 'email', nil, class: 'form-control form-control-md'
+      .col-md-6.form-group
+        label
+          | Password *
+        = text_field_tag 'password', nil, class: 'form-control form-control-md', type: 'password'
     .row
       .col-md-6.form-group
         = link_to 'log in', login_path, class: 'btn btn-block btn-black btn-md open-login-popup'
