--- a/engines/admin_ui/app/views/admin_ui/return_requests/_item.html.slim
+++ b/engines/admin_ui/app/views/admin_ui/return_requests/_item.html.slim
@@ -7,6 +7,7 @@ tr
   td = line_item.style_number
   td = line_item.style_name
   td = line_item.country_size
+  td = line_item.make_size
   td = line_item.colour_name
   td
     ul.list-unstyled
@@ -15,4 +16,3 @@ tr
   td = item.reason_category
   td = item.reason
   td = image_tag(line_item.image_url, height: '100')
-
