--- a/app/views/layouts/redesign/mega_menu/_shop.html.slim
+++ b/app/views/layouts/redesign/mega_menu/_shop.html.slim
@@ -29,55 +29,55 @@ li.shop.menu-item
           .col-md-3.col-lg-2.col-md-offset-4
             h4.link-header Events
             ul.mega-menu-list
-              li.mega-menu-list--item = link_to 'Formal',        build_taxon_path('Formal'),        title: 'Formal'
-              li.mega-menu-list--item = link_to 'Wedding',       build_taxon_path('Wedding'),       title: 'Wedding'
-              li.mega-menu-list--item = link_to 'Birthday',      build_taxon_path('Birthday'),      title: 'Birthday'
-              li.mega-menu-list--item = link_to 'Special Event', build_taxon_path('Special Event'), title: 'Special Event'
-              li.mega-menu-list--item = link_to 'Ball Gowns',    build_taxon_path('Ball Gowns'),    title: 'Ball Gowns'
-              li.mega-menu-list--item = link_to 'Bridesmaid',    bridesmaid_collection_path,        title: 'Bridesmaid'
-              li.mega-menu-list--item = link_to 'Graduation',    build_taxon_path('Graduation'),    title: 'Graduation'
-              li.mega-menu-list--item = link_to 'Prom',          build_taxon_path('Prom'),          title: 'Prom'
-              li.mega-menu-list--item = link_to 'Homecoming',    build_taxon_path('Homecoming'),    title: 'Homecoming'
-              li.mega-menu-list--item = link_to 'Sweet 16',      build_taxon_path('Sweet 16'),      title: 'Sweet 16'
-              li.mega-menu-list--item = link_to 'Debutante',     build_taxon_path('Debutante'),     title: 'Debutante'
+              li.mega-menu-list--item = link_to 'Formal Dresses'        , build_taxon_path('Formal')
+              li.mega-menu-list--item = link_to 'Wedding Dresses'       , build_taxon_path('Wedding')
+              li.mega-menu-list--item = link_to 'Birthday Dresses'      , build_taxon_path('Birthday')
+              li.mega-menu-list--item = link_to 'Special Event Dresses' , build_taxon_path('Special Event')
+              li.mega-menu-list--item = link_to 'Ball Gowns Dresses'    , build_taxon_path('Ball Gowns')
+              li.mega-menu-list--item = link_to 'Bridesmaid Dresses'    , bridesmaid_collection_path
+              li.mega-menu-list--item = link_to 'Graduation Dresses'    , build_taxon_path('Graduation')
+              li.mega-menu-list--item = link_to 'Prom Dresses'          , build_taxon_path('Prom')
+              li.mega-menu-list--item = link_to 'Homecoming Dresses'    , build_taxon_path('Homecoming')
+              li.mega-menu-list--item = link_to 'Sweet 16 Dresses'      , build_taxon_path('Sweet 16')
+              li.mega-menu-list--item = link_to 'Debutante Dresses'     , build_taxon_path('Debutante')
 
           .col-md-3.col-lg-2
             h4.link-header Style
             ul.mega-menu-list
-              li.mega-menu-list--item= link_to 'Plus Size',    build_taxon_path('Plus Size'),    title: "Plus-Size Dresses"
-              li.mega-menu-list--item= link_to 'Two-Piece',    build_taxon_path('Two Piece'),    title: "Two-Piece Dresses"
-              li.mega-menu-list--item= link_to 'One Shoulder', build_taxon_path('One-Shoulder'), title: "One Shoulder Dresses"
-              li.mega-menu-list--item= link_to 'Strapless',    build_taxon_path('Strapless'),    title: "Strapless Dresses"
-              li.mega-menu-list--item= link_to 'V-Neck',       build_taxon_path('V-Neck'),       title: "V-Neck Dresses"
-              li.mega-menu-list--item= link_to 'Split',        build_taxon_path('Split'),        title: "Split Dresses"
-              li.mega-menu-list--item= link_to 'Backless',     build_taxon_path('Backless'),     title: "Open Back Dresses"
-              li.mega-menu-list--item= link_to 'Lace',         build_taxon_path('Lace'),         title: "Lace Dresses"
+              li.mega-menu-list--item= link_to 'Plus Size Dresses'    , build_taxon_path('Plus Size')
+              li.mega-menu-list--item= link_to 'Two-Piece Dresses'    , build_taxon_path('Two Piece')
+              li.mega-menu-list--item= link_to 'One Shoulder Dresses' , build_taxon_path('One-Shoulder')
+              li.mega-menu-list--item= link_to 'Strapless Dresses'    , build_taxon_path('Strapless')
+              li.mega-menu-list--item= link_to 'V-Neck Dresses'       , build_taxon_path('V-Neck')
+              li.mega-menu-list--item= link_to 'Split Dresses'        , build_taxon_path('Split')
+              li.mega-menu-list--item= link_to 'Backless Dresses'     , build_taxon_path('Backless')
+              li.mega-menu-list--item= link_to 'Lace Dresses'         , build_taxon_path('Lace')
 
           .col-md-3.col-lg-2
             h4.link-header= t('color')
             ul.mega-menu-list
-              li.mega-menu-list--item= link_to "Black",         colour_path('Black'),  title: "Black"
-              li.mega-menu-list--item= link_to "White / Ivory", colour_path('White'),  title: "White / Ivory"
-              li.mega-menu-list--item= link_to "Blue",          colour_path('Blue'),   title: "Blue"
-              li.mega-menu-list--item= link_to "Pink",          colour_path('Pink'),   title: "Pink"
-              li.mega-menu-list--item= link_to "Red",           colour_path('Red'),    title: "Red"
-              li.mega-menu-list--item= link_to "Pastel",        colour_path('Pastel'), title: "Pastel"
+              li.mega-menu-list--item= link_to 'Black Dresses'         , colour_path('Black')
+              li.mega-menu-list--item= link_to 'White / Ivory Dresses' , colour_path('White')
+              li.mega-menu-list--item= link_to 'Blue Dresses'          , colour_path('Blue')
+              li.mega-menu-list--item= link_to 'Pink Dresses'          , colour_path('Pink')
+              li.mega-menu-list--item= link_to 'Red Dresses'           , colour_path('Red')
+              li.mega-menu-list--item= link_to 'Pastel Dresses'        , colour_path('Pastel')
 
           .col-md-3.col-lg-2
             - if Features.active?(:express_making)
               h4.link-header Express Making
               ul.mega-menu-list
-                li.mega-menu-list--item= link_to 'Dresses made in 48 hours', fast_making_dresses_path, title: 'Express Making'
+                li.mega-menu-list--item= link_to 'Dresses made in 48 hours', fast_making_dresses_path
 
             - if Features.active?(:sales)
               - if sale_active?
                 h4.link-header Sale - Up to 50% Off
                 ul.mega-menu-list
-                  li.mega-menu-list--item= link_to 'All Sale Dresses', sales_collection_path,  title: 'All Sale Dresses'
-                  li.mega-menu-list--item= link_to "15 Percent Off",   dresses_path(sale: 15), title: 'All Dresses 15% off'
-                  li.mega-menu-list--item= link_to "30 Percent Off",   dresses_path(sale: 30), title: 'All Dresses 30% off'
-                  li.mega-menu-list--item= link_to "40 Percent Off",   dresses_path(sale: 40), title: 'All Dresses 40% off'
-                  li.mega-menu-list--item= link_to "50 Percent Off",   dresses_path(sale: 50), title: 'All Dresses 50% off'
+                  li.mega-menu-list--item= link_to 'All Sale Dresses', sales_collection_path
+                  li.mega-menu-list--item= link_to '15 Percent Off',   dresses_path(sale: 15)
+                  li.mega-menu-list--item= link_to '30 Percent Off',   dresses_path(sale: 30)
+                  li.mega-menu-list--item= link_to '40 Percent Off',   dresses_path(sale: 40)
+                  li.mega-menu-list--item= link_to '50 Percent Off',   dresses_path(sale: 50)
 
 - if Features.active?(:style_quiz)
   li.menu-item
