--- a/app/views/marketing_mailer/abandoned_cart.html.slim
+++ b/app/views/marketing_mailer/abandoned_cart.html.slim
@@ -5,7 +5,7 @@ table align="center" bbgcolor="#ffffff" cellpadding="0" cellspacing="0" style="w
       table cellpadding="0" cellspacing="0" style="width:100%; margin:0; padding:0;" 
         tr
           td align="left" style="line-height:0; font-size:0; padding:11px 0 13px 2px;"
-            a href="http://www.fameandpartners.com/#{utms}"
+            a href="#{@resume_shop_url}/#{utms}"
               = image_tag '_email/abandonedcart-title.jpg', style: 'width: 463px; display: block'
         tr
           td style="height: 1px; background-color: black;"
@@ -14,24 +14,22 @@ table align="center" bbgcolor="#ffffff" cellpadding="0" cellspacing="0" style="w
             table cellpadding="0" cellspacing="0" 
               tr
                 td width="278"
-                  - if @product.present? && @images.present?
-                    a href="#{@product_url+utms}" title="Buy #{@product.name}"
-                      = image_tag @images[1].attachment.url(:product), style: "display: block; margin-bottom: 10px;", width: '278', height: '398'
-                td width="362" style="background: #FFDDE6; padding: 40px;" valign="top" 
+                  - if @product_image_url.present?
+                    a href="#{@product_url+utms}" title="Buy #{@product_name}"
+                      = image_tag @product_image_url, style: "display: block;", width: '278', height: '398'
+                td width="362" style="background: #FFDDE6; padding: 40px;" valign="top"
                   div style="font-family: 'Times New Roman', serif; font-size: 12px; margin: 0 0 10px;" For the next 24 hours get 10% off this dress!
                   div style="font-family: 'Times New Roman', serif; font-size: 22px; font-style: italic;"
-                    = @product.name
+                    = @product_name
                   div style="font-family: 'Times New Roman', serif; margin-top: 5px; font-size: 24px;" 
-                    - price = @product.zone_price_for(@site_version)
-                    - original_price = price.display_price 
                     span style="text-decoration: line-through; margin-right: 10px;"
-                      = original_price
+                      = @original_price
                     span style="color: #EE3D7F;"
-                      =  Spree::Money.new(price.amount-price.amount*0.1)
+                      = @discounted_price
                   div style="font-family: Helvetica), Arial, sans-serif; margin-top: 60px; font-size: 12px; text-transform: uppercase;" 
                     | Use promocode: Buyit10
                   div style="margin-top: 20px;"
-                    a href="http://www.fameandpartners.com/cart#{utms}" 
+                    a href="#{@resume_shop_url}/#{utms}"
                       = image_tag '_email/abandonedcart-btn.png', style: 'width: 214px; display: block'
         tr
           td style="height: 1px; background-color: black;" 
