[style quiz] admin profile

--- a/engines/style_quiz/app/views/spree/admin/style_quiz/user_profiles/index.html.slim
+++ b/engines/style_quiz/app/views/spree/admin/style_quiz/user_profiles/index.html.slim
@@ -3,6 +3,18 @@
 - content_for :page_title do
   = t(:listing_style_quiz_products)
 
+- content_for :sidebar_title do
+  = t(:search)
+
+- content_for :sidebar do
+  .box.align-center 
+    = search_form_for [:admin, :style_quiz, @search] do |f|
+      .field
+        = f.label t(:email)
+        = f.text_field :email_cont, class: 'fullwidth'
+      div
+        = button t(:search), 'icon-search'
+
 - if @user_profiles.blank?
   .no-objects-found = t(:no_results) 
 - else
@@ -27,6 +39,12 @@
               = link_to user_profile.user.fullname, admin_user_path(user_profile.user)
             - else
               = "#{ user_profile.fullname } (#{ user_profile.email })"
-          td = debug user_profile.answers
           td 
-            = link_to 'View', '#'
+            ul
+              - user_profile.answers.group_by(&:question_id).each do |question_id, answers|
+                li 
+                  = answers.first.question.code
+                  | :
+                  = answers.map{|answer| link_to answer.name, edit_admin_style_quiz_question_answer_path(answer.question, answer.id) }.join(', ').html_safe
+          td 
+            = link_to 'View', admin_style_quiz_user_profile_path(user_profile)
