--- a/engines/style_quiz/app/views/spree/admin/style_quiz/questions/index.html.slim
+++ b/engines/style_quiz/app/views/spree/admin/style_quiz/questions/index.html.slim
@@ -30,5 +30,5 @@
           td = question.name
           td = question.code
           td
-            = link_to 'Asnwers', admin_style_quiz_question_answers_path(question)
+            = link_to 'Answers', admin_style_quiz_question_answers_path(question)
             /= link_to 'Edit', edit_admin_style_quiz_question_path(question)
