--- a/app/assets/stylesheets/redesign/product/_fit_guide.css.scss
+++ b/app/assets/stylesheets/redesign/product/_fit_guide.css.scss
@@ -1,107 +1,361 @@
-.vex-theme-flat-attack.fit-guide {
+// - Vars
+$fg-screen-lg: 1230px;
+$fg-screen-md: 640px;
+$fg-screen-sm: 480px;
 
+// %schema-line-horizontal {
+//   position: absolute;
+//   height: 1px;
+//   display: block;
+//   background-color: #fff;
+//   z-index: 0;
+// }
+// %schema-line-vertical {
+//   position: absolute;
+//   width: 1px;
+//   display: block;
+//   background-color: #fff;
+//   z-index: 0;
+// }
+// %schema-line-vertical-arrow {
+//   @extend %schema-line-vertical;
+//   z-index: 1;
+//   bottom: 0;
+//   height: 35px;
+//   margin-top: -35px;
+//   &:before {
+//     content: '';
+//     position: absolute;
+//     bottom: 100%;
+//     left: -7px;
+//     width: 0;
+//     height: 0;
+//     border-style: solid;
+//     border-width: 0 7px 7px 7px;
+//     border-color: rgba(255, 255, 255, 0) rgba(255, 255, 255, 0) #fff rgba(255, 255, 255, 0);
+//   }
+// }
+
+%schema-text {
+  position: absolute;
+  width: 150px;
+  h2, p { 
+    margin: 0;
+    line-height: 1;
+    color: #000;
+  }
+}
+
+.vex-theme-flat-attack.fit-guide-dialog {
+  background-color: rgba(0, 0, 0, 0.4);
+  
+  .vex-overlay { background: none;}
+  
   .vex-content {
-    width:50%;
-    height:95%;
-    overflow-y:auto;
-    z-index:9999 !important;
-    border: 2px solid black;
-
-     h2 {
-       margin-bottom:0;
-     }
-
-    .size-alert {
-      background-color: #eeddf0;
-      padding:0.5em 1.5em 0.5em 1.5em;
-      margin-bottom:1em;;
+    width: 96%;
+    max-width: 1230px;
+    min-height: 600px;
+    background: url('_popups/fit-guide-bg.jpg') left top no-repeat #e7e6e5;
+    background-size: cover;
+    @media (max-width: $fg-screen-lg) {
+      background: url('_popups/fit-guide-bg-2.jpg') left 63px no-repeat #e7e6e5;
+      background-size: contain;
     }
+  }
 
-  table {
-    width: 95%;
+  .vex-dialog-buttons {
+    position: absolute;
+    top: 0;
+    right: 15px;
+    padding: 0 !important;
+    margin: 0 !important;
+
+    .btn {
+      background: url('_popups/fit-guide-close.png') no-repeat;
+      background-size: cover;
+      padding: 0;
+      width: 17px;
+      height: 17px;
+    }
+  }
+  .row {margin: 0;}
+  .col {
+    @media (min-width: $fg-screen-lg) {
+      float: left;
+      width: 50%;
+    }
+  }
+
+  .fit-guide-corner {
+    position: absolute;
+    top: 0;
+    left: 0;
+    @media (max-width: $fg-screen-lg) {
+      position: relative;
+      z-index: 0;
+      background-color: $pink-bg;
+      padding-top: 10px;
+      padding-bottom: 10px;
+    }
+    &:after {
+      content: '';
+      display: block;
+      position: absolute;
+      z-index: 0;
+      left: 0;
+      top: 0;
+      width: 0;
+      height: 0;
+      border-style: solid;
+      border-width: 180px 180px 0 0;
+      border-color: $pink-bg rgba(255, 255, 255, 0) rgba(255, 255, 255, 0) rgba(255, 255, 255, 0);
+      @media (max-width: $fg-screen-lg) {
+        display: none;
+      }
+    }
+    .fit-guide-corner-text {
+      text-align: center;
+      margin-top: 34px;
+      margin-left: -17px;
+      position: relative;
+      z-index: 1;
+      transform: rotate(-45deg);
+      h2 { 
+        font-size: 13px;
+        margin-bottom: 5px;
+      }
+      p {
+        font-size: 12px;
+        margin-bottom: 0;
+      }
+      
+      @media (max-width: $fg-screen-lg) {
+        transform: rotate(0deg);
+        margin: 0;
+        h2 { font-size: 18px;}
+        p { font-size: 14px;}
+        br { display: none;}
+      }
+      
+      @media (max-width: $fg-screen-sm) {
+        h2 { font-size: 15px;}
+        p { font-size: 12px;}
+      }
+    }
+  }
+
+  .fit-guide-text {
+    padding: 20px 20px 20px 50px; 
+    @media (max-width: $fg-screen-sm) {
+      padding: 10px;
+    }
+  }
+
+  .fit-guide-schema {
+    max-width: 80%;
+    height: 0;
+    padding-bottom: 94%;
     margin-left: auto;
     margin-right: auto;
+    position: relative;
+    @media (max-width: $fg-screen-lg) {
+      padding-bottom: 81%;
     }
 
-    .table > thead > tr > th {
-      border-bottom: none;
+    .line-bust-text {
+      @extend %schema-text;
+      top: 14%;
+      left: 13%;
+    }
+    .line-waist-text {
+      @extend %schema-text;
+      top: 22%;
+      left: 83%;
+    }
+    .line-hips-text {
+      @extend %schema-text;
+      top: 29%;
+      left: 6%;
+    }
+    .line-dress-text {
+      @extend %schema-text;
+      width: 160px;
+      top: 67.3%;
+      left: 0;
+    }
+    .line-skirt-text {
+      @extend %schema-text;
+      top: 67.3%;
+      left: 86%;
     }
 
-    img {
-      width: 217px;
-      display: block;
-    }
+    // .line-bust  {
+    //   @extend %schema-line-horizontal;
+    //   right: 30%;
+    //   top: 27%;
+    //   left: 23%;
+    //   @media (max-width: $fg-screen-lg) {
+    //     right: (30% + $schema-line-scale-right);
+    //   }
+    // }
+    // .line-bust-arrow {
+    //   @extend %schema-line-vertical-arrow;
+    //   left: 0;
+    // }
 
-    h6 {
-      font-size:1em;
-    }
+    // .line-waist {
+    //   @extend %schema-line-horizontal;
+    //   top: 35%;
+    //   left: 53.5%;
+    //   right: 14%;
+    //   @media (max-width: $fg-screen-lg) {
+    //     left: (53.5% - $schema-line-scale-left);
+    //   }
+    // }
+    // .line-waist-arrow {
+    //   @extend %schema-line-vertical-arrow;
+    //   right: 0;
+    // }
 
-    p {
-      font-size:0.666666em;
-      font-weight: 400;
-      padding-top: 14px;
-    }
+    // .line-hips  {
+    //   @extend %schema-line-horizontal;
+    //   top: 45%;
+    //   left: 23%;
+    //   right: 29.5%;
+    //   @media (max-width: $fg-screen-lg) {
+    //     right: (29.5% + $schema-line-scale-right);
+    //   }
+    //   .line-text {
+    //     left: -50px;
+    //   }
+    // }
+    // .line-hips-arrow {
+    //   @extend %schema-line-vertical-arrow;
+    //   left: 0;
+    // }
 
+    // .line-dress {
+    //   @extend %schema-line-vertical;
+    //   bottom: 0;
+    //   top: 18%;
+    //   left: 45%;
+    //   @media (max-width: $fg-screen-lg) {
+    //     left: (45% - $schema-line-scale-left);
+    //   }
+    // }
+    // .line-skirt {
+    //   @extend %schema-line-vertical;
+    //   bottom: 0;
+    //   top: 35%;
+    //   right: 23%;
+    //   @media (max-width: $fg-screen-lg) {
+    //     right: 37%;
+    //   }
+    // }
+  }
+  
+  h2 {
+    margin-top: 0;
+    margin-bottom: 15px;
+    font-weight: 600;
+    font-size: 18px;
+    text-transform: uppercase;
+  }
+
+  p {
+    font-size: 15px;
+    line-height: 1.4;
+  }
+
+  
+  .size-guide {
+    font-size: 14px;
+    text-align: center;
+    tr:nth-child(even) td {
+      background-color: rgba(0, 0, 0, 0.05);
+    }
+    th, td {
+      border: 0;
+    }
     th {
-      padding-left: 10px
-    }
-
-    thead {
       text-transform: uppercase;
-      background-color:#f5f5f5;
-
+      background-color: rgba(0, 0, 0, 0.05);
+      padding: 2px 2px 2px 15px;
     }
-
-    td.sub-heading {
-      font-size:0.666666em;
-      font-weight:400;
-      font-size: 15px;
-    }
-
-    td
-     {
-      border-top: none;
-      font-size:14px;
-      font-weight:400;
-      text-align: center;
-    }
-
-    tr:nth-child(even) {
-      background-color:#f5f5f5;
-    }
-
-    .vex-dialog-buttons {
-      position:absolute;
-      top:0;
-      right:0;
-      padding:0;
-      margin:0;
-
-      .btn {
-        padding: 6px 15px;
-        outline: none;
-        font-family: $font-family-secondary;
-      }
+    td {
+      padding: 2px;
     }
   }
+
+
+  // table {
+  //   width: 95%;
+  //   margin-left: auto;
+  //   margin-right: auto;
+  // }
+  
+  // .size-alert {
+  //   background-color: #eeddf0;
+  //   padding:0.5em 1.5em 0.5em 1.5em;
+  //   margin-bottom:1em;;
+  // }
+
+  // .table > thead > tr > th {
+  //   border-bottom: none;
+  // }
+
+  // img {
+  //   width: 217px;
+  //   display: block;
+  // }
+
+  // h6 {
+  //   font-size:1em;
+  // }
+
+  
+
+  // th {
+  //   padding-left: 10px
+  // }
+
+  // thead {
+  //   text-transform: uppercase;
+  //   background-color:#f5f5f5;
+
+  // }
+
+  // td.sub-heading {
+  //   font-size:0.666666em;
+  //   font-weight:400;
+  //   font-size: 15px;
+  // }
+
+  // td
+  //  {
+  //   border-top: none;
+  //   font-size:14px;
+  //   font-weight:400;
+  //   text-align: center;
+  // }
 
   @media screen and (max-width: 991px){
-    .vex-content {
-      width:90%;
-      height:90%;
-      margin-bottom: 62px;
-    }
+    // .vex-content {
+    //   width:90%;
+    //   height:90%;
+    //   margin-bottom: 62px;
+    // }
   }
   @media screen and (max-width: 480px){
-    .vex-content {
-      width:100%;
-      height:100%;
-      margin-bottom: 62px;
+    // .vex-content {
+    //   width:100%;
+    //   height:100%;
+    //   margin-bottom: 62px;
 
-      h2 {
-        padding-right: 50px;
-        padding-left: 50px;
-      }
-    }
+    //   h2 {
+    //     padding-right: 50px;
+    //     padding-left: 50px;
+    //   }
+    // }
   }
 }
