--- a/app/views/layouts/redesign/_google_tag_manager.html.erb
+++ b/app/views/layouts/redesign/_google_tag_manager.html.erb
@@ -12,34 +12,30 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-KV54GB');</script>
 
-<% if flash[:commerce_tracking] || params[:force_tracking] && @spree_order.present? %>
+
+<%# GTM Completed Order Tracking %>
+<% if flash[:commerce_tracking] || params[:force_tracking] && @marketing_order.present? %>
   <script>
     dataLayer.push({"event": "completedOrder"});
 
     dataLayerProducts = [];
-    <% @spree_order.line_items.each do |line_item| %>
-      <%
-        range_taxon   = range_taxon_for(line_item.variant.product)
-        category_name = range_taxon.present? ? range_taxon.name : ''
-        sku           = line_item.variant.sku
-        sku           = line_item.variant.product.sku if sku.blank?
-      %>
+    <% @marketing_order.line_items.each do |line_item| %>
       dataLayerProducts.push({
-        "sku"      : "<%= j sku %>",
-        "name"     : "<%= j line_item.variant.product.name %>",
-        "category" : "<%= j category_name %>",
-        "price"    : <%= line_item.price %>,
+        "sku"      : "<%= line_item.sku %>",
+        "name"     : "<%= line_item.product_name %>",
+        "category" : "<%= line_item.category_name %>",
+        "price"    : <%= line_item.total_amount %>,
         "quantity" : <%= line_item.quantity %>
       });
     <% end %>
 
     dataLayer.push({
-      "transactionId"          : "<%= @spree_order.number %>",
-      "transactionCurrency"    : "<%= @spree_order.currency %>",
+      "transactionId"          : "<%= @marketing_order.number %>",
+      "transactionCurrency"    : "<%= @marketing_order.currency %>",
       "transactionAffiliation" : "Fame & Partners",
-      "transactionTotal"       : <%= @spree_order.total %>,
-      "transactionTax"         : <%= @spree_order.adjustments.tax.sum(:amount) %>,
-      "transactionShipping"    : <%= @spree_order.adjustments.shipping.sum(:amount) %>,
+      "transactionTotal"       : <%= @marketing_order.total_amount %>,
+      "transactionTax"         : <%= @marketing_order.taxes_amount %>,
+      "transactionShipping"    : <%= @marketing_order.shipping_amount %>,
       "transactionProducts"    : dataLayerProducts
     });
   </script>
