[fix] logo image on header have rails root_path routing

--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -56,7 +56,7 @@ ruby:
     .nav-menu.nav-alert-top
       .container-fluid.nav-menu-container
         .masthead.pull-left.hidden-xs
-          = link_to '/' do
+          = link_to root_path
             = image_tag src='new-logo.svg', :class => 'nav-logo', :alt => 'Fame & Partners'
 
         .masthead.pull-left.visible-xs
