Use the right path for the form.

--- a/engines/admin_ui/app/views/admin_ui/reports/coupon_adjusted_orders/show.html.slim
+++ b/engines/admin_ui/app/views/admin_ui/reports/coupon_adjusted_orders/show.html.slim
@@ -5,7 +5,7 @@
   .ibox-title
     ' Coupon Adjusted Items
   .ibox-content
-    = form_tag admin_ui.reports_sale_items_path, method: 'post', class: 'form-horizontal'
+    = form_tag admin_ui.reports_coupon_adjusted_orders_path, method: 'post', class: 'form-horizontal'
       = render partial: 'form_fields'
       .form-group
         .col-lg-12
