[fix][email header] gmail proxy doesn't process .svg images

--- a/app/views/layouts/mailer.html.slim
+++ b/app/views/layouts/mailer.html.slim
@@ -26,7 +26,7 @@ html style="background: #fff none repeat scroll 0% 0%;"
                         = image_tag "_email/header-left.jpg", width: '113', height: '167', style: 'border: 0;'
                       td.logo style="text-align: center;"
                         = link_to main_app.root_url do
-                          = image_tag "new-logo.svg", width: '330', alt: "Fame&Partners", style: 'border: 0;'
+                          = image_tag "new-logo.png", width: '330', alt: "Fame&Partners", style: 'border: 0;'
                       td
                         = image_tag "_email/header-right.jpg", width: '168', height: '167', style: 'border: 0;'
                 tr
