--- a/app/views/products/details/_size_guide.html.slim
+++ b/app/views/products/details/_size_guide.html.slim
@@ -8,28 +8,27 @@
 .row
   .col
     .fit-guide-schema
-
-      .line-bust-text
+      .line-bust-text.fit-guide-schema-text
         h2 BUST
         p 
           ' Measure around the fullest part of your bust.
       
-      .line-waist-text
+      .line-waist-text.fit-guide-schema-text
         h2 WAIST
         p 
           ' Measure around your natural waistline.
 
-      .line-hips-text
+      .line-hips-text.fit-guide-schema-text
         h2 Hips
         p 
           ' Measure 20cm below your waistline at the fullest part of your hips.
 
-      .line-dress-text
+      .line-dress-text.fit-guide-schema-text
         h2 DRESS LENGTH
         p 
           ' Stand with your heels together, keep the tape straight and perpendicular to the floor. Measure from your shoulders.
 
-      .line-skirt-text
+      .line-skirt-text.fit-guide-schema-text
         h2 SKIRT LENGTH
         p 
           ' Stand with your heels together, keep the tape straight and perpendicular to the floor. Measure from your natural waistline.
