--- a/app/assets/stylesheets/redesign/_tables.css.scss
+++ b/app/assets/stylesheets/redesign/_tables.css.scss
@@ -1,4 +1,5 @@
-@media only screen and (max-width: 800px) {
+// @media only screen and (max-width: 800px) {
+@media only screen and (max-width: 640px) {
 
   .table table,
   .table thead,
@@ -9,7 +10,8 @@
     display: block;
   }
 
-  @media only screen and (min-width: 801px) {
+  // @media only screen and (min-width: 801px) {
+  @media only screen and (min-width: 641px) {
     .table > tbody > tr > td {
       clear: left;
     }
