--- a/engines/admin_ui/app/views/admin_ui/item_returns/index.html.slim
+++ b/engines/admin_ui/app/views/admin_ui/item_returns/index.html.slim
@@ -9,4 +9,4 @@
 div style="overflow-x: auto; max-height:100%;"
   = datagrid_table @collection, html: {class: 'table table.condensed'}
 
-
+= paginate @collection.assets, theme: 'admin_ui'
