[fix] use Rails routing for mobile home logo URL

--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -60,7 +60,7 @@ ruby:
             = image_tag src='new-logo.svg', :class => 'nav-logo', :alt => 'Fame & Partners'
 
         .masthead.pull-left.visible-xs
-          = link_to '/' do
+          = link_to root_path do
             = image_tag src='logo-mobile.svg', :class => 'mobile-logo', :alt => 'Fame & Partners'
 
         ul.primary.pull-left.hidden-sm.hidden-xs.hidden-xxs
