--- a/engines/admin_ui/app/views/admin_ui/content/pages/edit.html.slim
+++ b/engines/admin_ui/app/views/admin_ui/content/pages/edit.html.slim
@@ -1,4 +1,3 @@
 .pages.wrapper.wrapper-content.animated.fadeInRight
-
-    = form_for page, :url => edit_content_page_path(page), :html => {:class => 'form-horizontal'} do |f|
-      = render :partial => 'form', :locals => { :f => f }
+  = form_for page, :url => content_page_path(page), :html => {:class => 'form-horizontal'} do |f|
+    = render :partial => 'form', :locals => { :f => f }
