--- a/app/assets/stylesheets/redesign/stylesheets/styles.css
+++ b/app/assets/stylesheets/redesign/stylesheets/styles.css
@@ -8999,9 +8999,10 @@ xheader
   position: fixed;
   top: 0;
   height: 100%;
-  width: 260px;
+  width: 100%;
   /* header height */
   padding-top: 0px;
+  padding-bottom: 100px;
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
