--- a/engines/admin_ui/app/views/admin_ui/return_approvals/events/_receive_item.html.slim
+++ b/engines/admin_ui/app/views/admin_ui/return_approvals/events/_receive_item.html.slim
@@ -1,10 +1,10 @@
-= form_for @form, :url => { controller: 'return_approvals/events' }  do |f|
-  = f.hidden :event
+= form_for @form, :as => :event_data, :url => { controller: 'return_approvals/events' } do |f|
+  = hidden_field_tag :event_type, event_type
   .form-group
-    = f.label :location
-    = f.select :location, %w[AU US], include_blank: true
+    = f.label :location, class: 'control-label'
+    = f.select :location, %w[AU US], { include_blank: true}, { required: true, class: 'form-control' }
   .form-group
-    = f.label :received_on
-    = f.text_field :received_on, class: 'datepicker'
+    = f.label :received_on, class: 'control-label'
+    = f.text_field :received_on, class: 'datepicker form-control', required: true
   .form-group
-    =f.button 'Submit'
+    = f.button 'Submit'
