--- a/engines/admin_ui/app/views/layouts/admin_ui.html.slim
+++ b/engines/admin_ui/app/views/layouts/admin_ui.html.slim
@@ -14,3 +14,5 @@ html
         = flash_messages
         = yield
         /= render 'layouts/admin_ui/footer'
+  .hidden
+    = render 'layouts/admin_ui/modal'
