--- a/engines/admin_ui/app/views/admin_ui/content/pages/index.html.slim
+++ b/engines/admin_ui/app/views/admin_ui/content/pages/index.html.slim
@@ -17,7 +17,7 @@ table.table
           - if page.translation
             = link_to page.translation.title, edit_content_page_path(page)
         td
-          = button_to 'Edit', edit_content_page_path(page), :action => "edit", :method => "get", class: action_icon_class(:edit), :id => "edit_form"
-          = button_to 'Delete', content_page_path(page), :action => "destroy", :method => "delete", class: action_icon_class(:delete), :id => "delete_form"
+          = button_to 'Edit', edit_content_page_path(page), :action => "edit", :method => "get", class: "btn btn-primary", :id => "edit_form"
+          = button_to 'Delete', content_page_path(page), :action => "destroy", :method => "delete", class: "btn btn-primary", :id => "delete_form"
 
 = link_to 'Create a Page', new_content_page_path, class: "btn btn-primary"
