--- a/app/views/products/details/_share_buttons.html.slim
+++ b/app/views/products/details/_share_buttons.html.slim
@@ -1,15 +1,12 @@
-.col-md-3.col-sm-3.col-xs-3
-  span class='st_facebook_custom' data-st_title=product.name data-st_summary=product.short_description data-st_image=product.featured_image.large
-    = image_tag '_icons/facebook.png'
-
-.col-md-3.col-sm-3.col-xs-3
-  span class='st_pinterest_custom' data-st_title=product.name data-st_summary=product.short_description data-st_image=product.featured_image.large
-    = image_tag '_icons/pinterest.png'
-
-.col-md-3.col-sm-3.col-xs-3
-  span class='st_instagram_custom' data-st_username='fameandpartners' data-st_title=product.name data-st_summary=product.short_description data-st_image=product.featured_image.large
-    = image_tag '_icons/instagram.png'
-
-.col-md-3.col-sm-3.col-xs-3
-  span class='st_twitter_custom' data-st_via="fameandpartners" data-st_title=product.name data-st_summary=product.short_description data-st_image=product.featured_image.large
-    = image_tag '_icons/twitter.png'
+  span style="margin-right:15px"
+    span class='st_facebook_custom' data-st_title=product.name data-st_summary=product.short_description data-st_image=product.featured_image.large
+      = image_tag '_icons/facebook.png'
+  span style="margin-right:15px"
+    span class='st_pinterest_custom' data-st_title=product.name data-st_summary=product.short_description data-st_image=product.featured_image.large
+      = image_tag '_icons/pinterest.png'
+  span style="margin-right:15px"
+    span class='st_instagram_custom' data-st_username='fameandpartners' data-st_title=product.name data-st_summary=product.short_description data-st_image=product.featured_image.large
+      = image_tag '_icons/instagram.png'
+  span style="margin-right:15px"
+    span class='st_twitter_custom' data-st_via="fameandpartners" data-st_title=product.name data-st_summary=product.short_description data-st_image=product.featured_image.large
+      = image_tag '_icons/twitter.png'
