add validation and fields for both us and au

--- a/engines/admin_ui/app/assets/stylesheets/admin_ui/forms.css
+++ b/engines/admin_ui/app/assets/stylesheets/admin_ui/forms.css
@@ -1,5 +1,13 @@
-  #edit_form , #delete_form
-  {
-    float:left;
-    margin-right: 5px;
-  }
+#edit_form , #delete_form
+{
+  float:left;
+  margin-right: 5px;
+}
+
+.validation-error{
+  text-align: center;
+  color: red;
+  margin-bottom: 10px;
+  font-weight: bold;
+}
+
