--- a/engines/admin_ui/app/views/admin_ui/content/pages/_translation_form.html.slim
+++ b/engines/admin_ui/app/views/admin_ui/content/pages/_translation_form.html.slim
@@ -1,16 +1,19 @@
+.validation-error
+  | Please fill in Title and Meta description fields for all locales
+
 .form-group
   label.col-sm-2.control-label Locale
-  .col-sm-10= t.text_field :locale, :disabled => false, :id => "locale"
+  .col-sm-10= t.text_field :locale, :disabled => false, :class => "locale"
 
 /.hr-line-dashed
 .form-group
   label.col-sm-2.control-label Title
-  .col-sm-10 = t.text_field :title, :class => 'form-control'
+  .col-sm-10 = t.text_field :title, :class => 'form-control translation-title'
 
 .hr-line-dashed
 .form-group
   label.col-sm-2.control-label Meta Description
-  .col-sm-10 = t.text_field :meta_description, :class => 'form-control'
+  .col-sm-10 = t.text_field :meta_description, :class => 'form-control translation-meta-description'
 
 .hr-line-dashed
 .form-group
