--- a/app/views/products/collections/_products_without_content.html.slim
+++ b/app/views/products/collections/_products_without_content.html.slim
@@ -1,5 +1,5 @@
 - @collection.products.each_slice(4) do |products|
   /! [][][][]
   .row.relative
-    = render partial: 'product', collection: products, as: :product
+    = render partial: '/products/collections/product', collection: products, as: :product
   .clearfix.visible-sm-block.visible-xs-block
