Prices for site_version

--- a/app/views/pages/mystyle.html.slim
+++ b/app/views/pages/mystyle.html.slim
@@ -17,7 +17,7 @@ ruby:
     images = p.images.find_all{|i| i.attachment_file_name.downcase.include?(colour_name.gsub('-', '_')) && i.attachment_file_name.downcase.include?('crop') }
     images = images.sort_by{ |i| i.position }.collect{ |i| i.attachment.url(:large) }
 
-    price = Spree::Price.new(:amount => p.price, :currency => current_site_version.currency)
+    price = p.zone_price_for(current_site_version)
     color = Spree::OptionValue.where(:name => colour_name).first
 
     OpenStruct.new(
